Fix: clicking on the toggle icon makes it collapse

--- a/style.css
+++ b/style.css
@@ -2116,6 +2116,11 @@ footer p {
     width: 12.25px;
     height: 14px;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.shop-section .brands-section .brand-title-container .icon.flipped {
+    transform: rotateX(180deg);
 }
 
 .shop-section .brands-section .brand-title {
@@ -2123,6 +2128,14 @@ footer p {
     font-family: var(--fontFamily-volkhov);
 }
 
+
+.shop-section .brands-section .brand-names.active {
+    display: block;
+}
+
+.shop-section .brands-section .brand-names {
+    display: none;
+}
 
 .shop-section .tag-section .tag-names .tag-list,
 .shop-section .brands-section .brand-names .name-list {
@@ -2155,6 +2168,11 @@ footer p {
     width: 12.25px;
     height: 14px;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.shop-section .collection-section .collection-title-container .icon.flipped {
+    transform: rotateX(180deg);
 }
 
 .shop-section .collection-section .collection-title {
@@ -2167,6 +2185,10 @@ footer p {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.shop-section .collection-section .collection-container.active {
+    display: none;
 }
 
 .shop-section .collection-section .collection-item {
